--- a/src/main/webapp/WEB-INF/views/table_demo1.html
+++ b/src/main/webapp/WEB-INF/views/table_demo1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="../lib/layui/css/layui.css">
+    <link rel="stylesheet" type="text/css" href="../../lib/layui/css/layui.css">
     <script type="text/javascript" src="../lib/layui/layui.js"></script>
 </head>
 <body>
